feat: Update README.md with detailed features and smart contract overview; add rewrites to Vercel configuration

--- a/sui-event-horizon/vercel.json
+++ b/sui-event-horizon/vercel.json
@@ -8,5 +8,6 @@
         "installCommand": "npm install --legacy-peer-deps"
       }
     }
-  ]
+  ],
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
